<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="#EEEEEE" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/home_me"
            android:textColor="#000000"
            android:layout_margin="5dp"
            android:textSize="18.0dip" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/home_ranking"
            android:textColor="#000000"
            android:layout_margin="5dp"
            android:textSize="18.0dip" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/home_category"
            android:textColor="#000000"
            android:layout_margin="5dp"
            android:textSize="18.0dip" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/home_special"
            android:textColor="#000000"
            android:layout_margin="5dp"
            android:textSize="18.0dip" />

         <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text=" "
            android:textColor="#000000"
            android:textSize="18.0dip" />
        <SearchView
            android:id="@+id/searchView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" >
        </SearchView>
    </LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:scaleType="matrix"
        android:src="@drawable/roller" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>